fixed minor alignment bugs on the tasks page

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,8 @@ p {
     background-color: #9e9e9e79;  
     color: white;               /* Text color */
     border: none;               /* Remove border */
+    margin-bottom: 2px;
+    margin-top: 2px;
 }
 
 .greybutton:hover {
